# 2023_test

aruco/include/aruco/: markerdetector.h
aruco/src/aruco/: cvdrawingutils.cpp  dictionary.cpp  markerdetector.cpp
aruco_ros/: CMakeLists.txt  package.xml
aruco_ros/launch/: camera_purple.launch  camera_yellow.launch  central_single.launch
aruco_ros/msg/: campos.msg  custom_msgs.msg
aruco_ros/src/: dynamic_correction.cpp  simple_single_central.cpp  simple_single_correction.cpp
sample_pos/: CMakeLists.txt  package.xml
sample_pos/src/: sample_function.py  sample_pos.py  sample_pos.py.save  test.py
sample_pos/src/backup/: sample_function_bu.py  sample_function_buu.py  sample_pos_bu.py  sample_pos_buu.py
